samples/_failures_safe/1761436900_d266ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d74febef.c: In function ‘main’:
./samples/SAFE/__tmp_d74febef.c:169:5: error: expected declaration or statement at end of input
  169 |     if (!tokens) {
      |     ^~
./samples/SAFE/__tmp_d74febef.c:169:5: error: expected declaration or statement at end of input
